feat: ignore watcher when writing

--- a/example/package.json
+++ b/example/package.json
@@ -19,6 +19,8 @@
     },
     "optimizeDeps": {
       "include": [
+        "lodash/map",
+        "lodash/set",
         "lodash/upperCase"
       ]
     }
