--- a/package.json
+++ b/package.json
@@ -34,7 +34,8 @@
   },
   "dependencies": {
     "debug": "^4.3.2",
-    "fs-extra": "^10.0.0"
+    "fs-extra": "^10.0.0",
+    "local-pkg": "^0.4.1"
   },
   "devDependencies": {
     "@antfu/eslint-config": "^0.6.4",
